--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Shizhe's Personal Website"
 title_separator          : "-"
 name                     : &name "Shizhe Yu"
 description              : "" #&description "personal description"
-url                      : https://shizhe-yu.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : "https://shizhe-yu.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/bio.png"
+  avatar           : "bio.png"
   name             : "Shizhe Yu"
   pronouns         : "" # example: "she/her"  
   bio              : "Economics Ph.D. Student"
   location         : "Madison, Wisconsin"
   employer         : "University of Wisconsin-Madison"
-  uri              : "" # URL
+  uri              : "https://econ.wisc.edu/staff/yu-shizhe/" # URL
   email            : "shizhe.yu@wisc.edu"
 
   # Academic websites
@@ -46,12 +46,12 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : # "academicpages"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
