--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Shizhe Yu"
   pronouns         : "" # example: "she/her"  
   bio              : "Economics Ph.D. Student"
-  location         : "6473 Observatory Dr"
+  location         : "Office 6473, 1180 Observatory Dr"
   employer         : "University of Wisconsin-Madison"
   uri              : "" #"https://econ.wisc.edu/staff/yu-shizhe/" # URL
   email            : "shizhe.yu@wisc.edu"
