--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "bio.jpg"
+  avatar           : "bio.png"
   name             : "Shizhe Yu"
   pronouns         : "" # example: "she/her"  
   bio              : "Economics Ph.D. Student"
