--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,6 +28,9 @@ main:
     
   - title: "CV"
     url: /cv/
+
+  - title: "Personal"
+    url: /personal/
     
   # - title: "CV"
   #   url: /cv-json/
